
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int info (char*,...) ;

__attribute__((used)) static void print_usage(const char* name) {
 info("Usage: \n");
 info(" %s idt [NUM]                       "
   "dump IDT entries\n", name);
 info(" %s pid PID DIR                     "
   "dump process memory\n", name);
 info(" %s virt ADDR LENGTH [FILE]         "
   "dump virtual memory\n", name);
 info(" %s phys OFFSET LENGTH [FILE]       "
   "dump physical memory\n", name);
 info(" %s search STRING [OFFSET [LENGTH]] "
   "search start of each physical page\n", name);
 info("\n");
 info(" NUM, PID - decimals\n");
 info(" ADDR, LENGTH, OFFSET - hex\n");
 info(" DIR, FILE, STRING - strings\n");
}
