; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_print_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_print_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"Usage: \0A\00", align 1
@.str.1 = private unnamed_addr constant [54 x i8] c" %s idt [NUM]                       dump IDT entries\0A\00", align 1
@.str.2 = private unnamed_addr constant [57 x i8] c" %s pid PID DIR                     dump process memory\0A\00", align 1
@.str.3 = private unnamed_addr constant [57 x i8] c" %s virt ADDR LENGTH [FILE]         dump virtual memory\0A\00", align 1
@.str.4 = private unnamed_addr constant [58 x i8] c" %s phys OFFSET LENGTH [FILE]       dump physical memory\0A\00", align 1
@.str.5 = private unnamed_addr constant [72 x i8] c" %s search STRING [OFFSET [LENGTH]] search start of each physical page\0A\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.7 = private unnamed_addr constant [22 x i8] c" NUM, PID - decimals\0A\00", align 1
@.str.8 = private unnamed_addr constant [29 x i8] c" ADDR, LENGTH, OFFSET - hex\0A\00", align 1
@.str.9 = private unnamed_addr constant [30 x i8] c" DIR, FILE, STRING - strings\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @print_usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.1, i64 0, i64 0), i8* %4)
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.2, i64 0, i64 0), i8* %6)
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.3, i64 0, i64 0), i8* %8)
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.4, i64 0, i64 0), i8* %10)
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.5, i64 0, i64 0), i8* %12)
  %14 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.7, i64 0, i64 0))
  %16 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.8, i64 0, i64 0))
  %17 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.9, i64 0, i64 0))
  ret void
}

declare dso_local i32 @info(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
